// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button disabled 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      class="Button-sc-1age22d-0 bpQMtY"
      disabled=""
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Button label 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      class="Button-sc-1age22d-0 hUgKig"
    >
      Coucou
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Button onClick 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      class="Button-sc-1age22d-0 hUgKig"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Button playground 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      class="Button-sc-1age22d-0 bpQMtY"
      disabled=""
    >
      Hello Storybook
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Button with no props 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      class="Button-sc-1age22d-0 hUgKig"
    />
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;
